--- a/styles.css
+++ b/styles.css
@@ -14,28 +14,82 @@ body {
   background-color: #393E46;
 }
 
-h1 {
+h2 {
   margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 8rem;
+  font-size: 4rem;
   color: #4ECCA3;
 }
 
 p {
   font-size: 2rem;
   color: #4ECCA3;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Lobster', cursive;
 }
 
 img {
   width: 80%;
 }
 
+.btn-reload{
+  margin: 2rem;
+}
+.btn{
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  font-family: 'Montserrat', sans-serif;
+  padding: 14px 40px;
+  margin: 1% 3%;
+}
+
+.btn-secondary {
+  color:#4ECCA3;
+  background-color: #393E46;
+  border:2px solid #4ECCA3;
+  transition-duration: 0.4s;
+}
+
+.btn-secondary:hover {
+  background-color: #EEEEEE;
+  color:#393E46 ;
+}
+
 footer {
   margin-top: 5%;
   color: #EEEEEE;
   text-align: center;
-  font-family: 'Indie Flower', cursive;
-
+  font-family: 'Lobster', cursive;
+}
+.footer{
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  padding: 2rem;
+  border-top-right-radius: 1rem;
+}
+.footer .link{
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+}
+.footer img{
+  height:40px;
+  width: 40px;
+  filter:invert(100%);
+}
+.footer p{
+  color: #EEEEEE;
+  font-size: 1rem;
+}
+.footer ul{
+  padding-inline-start: 0px;
+}
+.footer .list-non-bullet{
+  list-style: none;
+}
+.footer .list-item-inline{
+  display: inline;
+  padding: 0rem 0.5rem;
 }
